--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dnssd",
-  "version": "0.4.1",
-  "description": "Bonjour/Avahi-like service discovery in pure JavaScript",
+  "name": "dnssd2",
+  "version": "1.0.0",
+  "description": "Bonjour/Avahi-like service discovery in pure JavaScript, originally dnssd from https://github.com/DeMille/dnssd.js",
   "keywords": [
     "bonjour",
     "avahi",
@@ -9,8 +9,11 @@
     "zeroconf"
   ],
   "author": "Sterling DeMille <sterlingdemille+npm@gmail.com>",
+  "contributors": [
+    "Teppo Kurki <teppo.kurki@iki.fi>"
+  ],
   "license": "MIT",
-  "repository": "https://github.com/DeMille/dnssd.js",
+  "repository": "https://github.com/tkurki/dnssd.js",
   "main": "index.js",
   "devDependencies": {
     "babel-cli": "^6.16.0",
